# epoll-chat

./: .gitignore  .gitmodules  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  client.c  credentials.txt  dist.sh  im.proto  request.proto  response.proto  server.c
clientlib/: BUILD.bazel  auth.c  auth.h  command.c  command.h  socket.c  socket.h
clientlib/commands/: block.c  block.h  broadcast.c  broadcast.h  login.c  login.h  logout.c  logout.h  message.c  (+19 more)
lib/: BUILD.bazel  auth.c  auth.h  client.h  file.c  file.h  response.c  response.h  socket.c  socket.h
proto/: BUILD.bazel  BlockRequest.pb.c  BlockRequest.pb.h  ChunkDataRequest.pb.c  ChunkDataRequest.pb.h  ChunkDataResponse.pb.c  ChunkDataResponse.pb.h  ExitResponse.pb.c  ExitResponse.pb.h  GetIPRequest.pb.c  GetIPRequest.pb.h  GetIPResponse.pb.c  GetIPResponse.pb.h  IMRequest.pb.c  IMRequest.pb.h  IMResponse.pb.c  IMResponse.pb.h  IPResponse.pb.c  IPResponse.pb.h  LogOutRequest.pb.c  LogOutRequest.pb.h  LoginRequest.pb.c  LoginRequest.pb.h  MessageRequest.pb.c  MessageRequest.pb.h  PrivateRegistrationResponse.pb.c  PrivateRegistrationResponse.pb.h  RegisterChunkRequest.pb.c  RegisterChunkRequest.pb.h  RegisterFileRequest.pb.c  RegisterFileRequest.pb.h  SearchFileRequest.pb.c  SearchFileRequest.pb.h  TextResponse.pb.c  TextResponse.pb.h  UnBlockRequest.pb.c  UnBlockRequest.pb.h  WhoElseRequest.pb.c  WhoElseRequest.pb.h
serverlib/: BUILD.bazel  auth.c  auth.h  buffer.c  buffer.h  client.h  command.c  command.h  socket.c  socket.h
toolchain/: BUILD  builtin_include_directory_paths  cc_wrapper.sh
(+20 files in other folders)
